samples/_failures_safe/1761689418_b79e4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e6ca035.c: In function ‘create_cube’:
./samples/SAFE/__tmp_1e6ca035.c:131:5: error: expected identifier at end of input
  131 |     cube.
      |     ^~~~
./samples/SAFE/__tmp_1e6ca035.c:131:5: error: expected declaration or statement at end of input
